--- a/litellm_config.yaml
+++ b/litellm_config.yaml
@@ -1,5 +1,4 @@
 model_list:
-  # 用途別の論理名を作っておくと後で差し替えが楽
   - model_name: sarashina-3b
     litellm_params:
       model: ollama/sarashina-3b
@@ -8,6 +7,11 @@ model_list:
   - model_name: gpt-oss-20b
     litellm_params:
       model: ollama/gpt-oss:20b
+      api_base: http://ollama:11434
+
+  - model_name: qwen3-8b
+    litellm_params:
+      model: ollama/qwen3:8b
       api_base: http://ollama:11434
 
   - model_name: gpt-4o-mini
