--- a/docker-compose.n8n.yaml
+++ b/docker-compose.n8n.yaml
@@ -21,6 +21,9 @@ x-n8n: &service-n8n
     - N8N_PERSONALIZATION_ENABLED=false
     - N8N_ENCRYPTION_KEY
     - N8N_USER_MANAGEMENT_JWT_SECRET
+    - N8N_HOST="n8n.ahus.uk"
+    - N8N_PORT=443
+    - N8N_PROTOCOL=https
     - OLLAMA_HOST=${OLLAMA_HOST:-ollama:11434}
   env_file:
     - path: .env
@@ -64,7 +67,7 @@ services:
     container_name: n8n
     restart: unless-stopped
     ports:
-      - 5678:5678
+      - 5678:443
     volumes:
       - n8n_storage:/home/node/.n8n
       - ./n8n:/n8n
